# compact-phone

./: .env.local.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  QA-COVERAGE-REPORT.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  vcpkg-configuration.json  vcpkg.json
.githooks/: pre-commit
.github/workflows/: ci.yml  linux-builder-image.yml  platform-matrix.yml  release-linux.yml  release-macos.yml  release-windows.yml  secret-scan.yml  trigger-mywebs-docs.yml
branding/: README.md  compactphone.desktop  compactphone.icns
cmake/: FindPJSIP.cmake
docs/: STATUS.md  appcast.md  download-urls.md  interop.md  provisioning.md
docs/acceptance/: v0.1.md
docs/superpowers/specs/: 2026-05-25-sentry-crash-reporting-design.md
packaging/linux/: README.md  compactphone.desktop
packaging/macos/: README.md  build-dmg.sh  compactphone.entitlements
packaging/windows/: README.md  generate-stage-wxs.ps1  installer.wxs
src/: CMakeLists.txt  Info.plist.in  compactphone.rc  entitlements.plist  headless_main.cpp  main.cpp
src/core/: Account.cpp  Account.h  AccountsController.cpp  AccountsController.h  AccountsManager.cpp  AccountsManager.h  BootConfig.cpp  BootConfig.h  CallEntry.cpp  CallEntry.h  CallManager.cpp  CallManager.h  CallSessionTracker.cpp  CallSessionTracker.h  CallSnapshotSource.h  CallsController.cpp  CallsController.h  Contact.h  ContactImporter.cpp  ContactImporter.h  ContactsManager.cpp  ContactsManager.h  CrashReporting.cpp  CrashReporting.h  HistoryEntry.h  HistoryManager.cpp  HistoryManager.h  LinesManager.cpp  LinesManager.h  LogBuffer.cpp  LogBuffer.h  Message.h  MessagesManager.cpp  MessagesManager.h  NetworkMonitor.cpp  NetworkMonitor.h  PhoneController.cpp  PhoneController.h  PowerMonitor.cpp  PowerMonitor.h  (+21 more)
src/core/platform/: Keychain.h  Keychain_factory.cpp  Keychain_factory.h  Keychain_file.cpp  Keychain_file.h  Keychain_macos.h  Keychain_macos.mm  Keychain_memory.cpp  Keychain_memory.h  Keychain_windows.cpp  Keychain_windows.h  TouchIdGate.h  TouchIdGate.mm
src/core/provisioning/: DaktelaProvider.cpp  DaktelaProvider.h  Provider.h  Registry.cpp  Registry.h
src/i18n/: compactphone_cs.ts
src/models/: AccountsModel.cpp  AccountsModel.h  CallsModel.cpp  CallsModel.h  ContactsModel.cpp  ContactsModel.h  ConversationsModel.cpp  ConversationsModel.h  HistoryModel.cpp  HistoryModel.h  LinesModel.cpp  LinesModel.h  MessagesModel.cpp  MessagesModel.h
src/persistence/: Database.cpp  Database.h
src/resources/: branding.qrc  generate_ringtone.py  ringtone.qrc
src/ui/qml/: AccountEditDialog.qml  AccountsPane.qml  ActiveCallView.qml  ContactEditDialog.qml  ContactsPane.qml  DialerPane.qml  HistoryPane.qml  Icons.qml  IncomingCallDialog.qml  LinesPane.qml  LogViewerDialog.qml  Main.qml  MessagesPane.qml  ProviderSignInDialog.qml  SettingsPane.qml  Snackbar.qml  Theme.qml  TransferDialog.qml
src/ui/qml/components/: AppButton.qml  AppCard.qml  AppCheckBox.qml  AppComboBox.qml  AppIcon.qml  AppSwitch.qml  BrandMark.qml  DaktelaMark.qml  IconButton.qml  NavItem.qml  StatusBadge.qml  ThemeCard.qml
tests/: CMakeLists.txt
tests/integration/: test_attended_transfer.cpp  test_audio_playback.cpp  test_blind_transfer.cpp  test_call_lifecycle.cpp  test_call_policies.cpp  test_call_recording.cpp  test_conference.cpp  test_dtmf.cpp  test_forward_call.cpp  test_hold_unhold.cpp  test_inbound_call.cpp  test_instant_message.cpp  test_mute.cpp  test_outbound_call_echo.cpp  test_register_tls.cpp  test_register_udp.cpp  test_stream_stats_live.cpp
tests/integration/docker/: README.md  extensions.conf  pjsip.conf  rtp.conf
tests/integration/docker/tls/: README.md  server.crt  server.key
tests/manual/: test_daktela_live.cpp
tests/unit/: test_account_types.cpp  test_accounts_controller.cpp  test_accounts_manager_password.cpp  test_accounts_manager_update.cpp  test_active_call_layout.cpp  test_bootconfig.cpp  test_call_session_tracker.cpp  test_calls_model.cpp  test_contact_importer.cpp  test_contacts_manager.cpp  test_crash_reporting.cpp  test_daktela_branding_layout.cpp  test_daktela_provider.cpp  test_database.cpp  test_history_manager.cpp  test_keychain.cpp  test_keychain_factory.cpp  test_lines_manager.cpp  test_log_buffer.cpp  test_messages_manager.cpp  test_models.cpp  test_release_packaging.cpp  test_settings_controller.cpp  test_settings_manager.cpp  test_sip_uri.cpp  test_sipengine_lifecycle.cpp  test_stream_stats.cpp  test_update_checker.cpp  test_url_dispatcher.cpp
tools/: generate-icons.sh
tools/dev/: Dockerfile  README.md  docker-compose.yml  remote-builds.md
tools/dev/triplets/: README.md  arm64-linux.cmake  x64-linux.cmake
tools/release/: build-linux-appimage.sh  generate-appcast.py  simulate-linux-release.sh  test_verify_release_version.py  verify-release-version.py
tools/release/triplets/: arm64-osx.cmake  x64-windows.cmake
web/: README.md
web/docs/: docs.js  index.html  markdown.js
web/docs/pages/: configuration.md  faq.md  getting-started.md  installation.md  introduction.md  provisioning.md  troubleshooting.md
